--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   background: #000A63;
-  width: 60%;
+  width: 70%;
 }
 
 a {
@@ -24,46 +24,6 @@ a:hover {
   font-weight: bold;
 }
 
-.search  {
-  display: flex;
-  justify-content: flex-end;
-  gap: 1rem;
-  width: 80%;
-} 
-
-input {
-  border: none;
-  border-radius: 5px;
-  padding: 0.5rem;
-  width: 40%;
-  font-size: large;
-}
-
-#menu {
-  display: flex;
-  list-style: none;
-  gap: 3rem; 
-}
-
-#menu a {
-  display: block;
-  padding: 0.5rem;
-}
-#menu li a{
-    padding: 10px;
-    border-radius: 7px;
-    font-weight: 600;
-}
-#menu li a:hover{
-    background-color: white;
-    color: #000A63;
-    transition: all 0.4s;
-}
-
-#btn-mobile {
-  display: none;
-}
-
 .cart-login {
     display: flex;
     align-items: center;
@@ -74,6 +34,10 @@ input {
   font-size: 28px;
   fill: #fff;
   cursor: pointer
+}
+
+#bar-menu{
+  display: none;
 }
 
 .social-medias-header a {
@@ -87,7 +51,7 @@ input {
   right: 0;
   padding: 2em;
   z-index: 10;
-  gap: 0.7rem;
+  gap: 0.2rem;
 }
 
 
@@ -101,4 +65,48 @@ input {
 .social-medias-header svg:hover {
   color: white;
   background:  rgba(255, 255, 255, 0.2);
+}
+
+
+@media screen and (max-width: 767px) {
+  #header {
+    box-sizing: border-box;
+    margin: auto;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #000A63;
+    width: 90%;
+  }
+
+  #logo {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .cart-login {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+.icons-header{
+  font-size: 24px;
+  fill: #fff;
+  cursor: pointer
+}
+
+.icons-header#profile-icon {
+  display: none;
+}
+
+#bar-menu{
+  display: flex;
+}
+
+.social-medias-header{
+  display: none;
+}
+
 }
