--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;  
   }
   
   body, html {
@@ -21,12 +21,12 @@
     align-items: center;
     justify-content: center;
     padding: 15px;
-    background-color: #111;
+    background: #040d5aee;  
   }
   
   .wrap-login {
     width: 390px;
-    background-color: #333;
+    background: #161616;
     border-radius: 10px;
     overflow: hidden;
     padding: 77px 55px 33px 55px;
