--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,112 +1,77 @@
-.navbar {
-    margin: 0 3rem 0 5rem;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+header {
+    background-color: #000A63;
+    font-family: "Lato";
+    /* box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.33); */
 }
 
-.offcanvas {
-    background: #000A63;
-}
-
-.nav-link  {
-    font-size: 1.3rem;
-    text-align: center; 
-}
-
-.icones-header {
+header .container {
     display: flex;
-    gap: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    
+    width: 100%;
+    max-width: 1400px;
+    margin: auto;
+    padding: 0.5rem;
+
 }
 
-.nav-bar {
-    background: none;
-    border: none;
-}
-.icones-header {
+.menu {
     display: flex;
     align-items: center;
+    
+}
+
+.menu ul {
+    display: flex;
+    gap: 2.5rem;
+    list-style: none;
+    margin: 0;
+}
+
+.menu ul li a {
+    color: white;
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+    
+}
+
+.buttons {
+    display: flex;
     gap: 1rem;
 }
-span.navbar-toggler-icon {
-    font-size: 1.5rem;
+
+.buttons button {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 3px;
+    background-color: transparent;
+}
+
+.buttons .btn-criar {
+    border: 1px solid #0B5ED7;
+    color: #0B5ED7;
+    transition: all 0.2s ease;
+}
+
+.buttons .btn-criar:hover {
+    border: 1px solid #0B5ED7;
+    background-color: #0B5ED7;
     color: #FFF;
 }
 
-ul.dropdown-menu.show {
-    text-align: left;
-    width: 15%;
-    background: #000A63;
-    border: none;
-    padding: 0;
-    margin: 0 auto;
-    transition: all 2s ease;
-}
-.dropdown-item {
-    color: #bfc2d1;
-    font-size: 0.7rem;
-    width: 80%;
-    text-align: left;
-    padding: 0 0 0 0.6rem;
-    display: flex;
-    margin: 0 auto;
-}
-.dropdown-item:hover {
-    background: none;
-    color: #9296a5;
+.buttons .btn-entrar {
+    border: 1px solid #157347;
+    color: #157347;
+    transition: all 0.2s ease;
 }
 
-.log-in_sign-in_button {
-    display: flex;
-    justify-content: center ;
-    padding: 5rem;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    gap: 0.5rem;
+.buttons .btn-entrar:hover {
+    border: 1px solid #157347;
+    background-color: #157347;
+    color: #FFF;
 }
 
-.social-medias-menu {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    gap: 1.5rem;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 1rem;
-}
 
-.social-medias-menu svg {
-    font-size: 3rem;
-    padding: 10px;
-    cursor: pointer;
-}
-.social-icon-fb:hover {
-    background: #FFF;
-    border-radius: 100%;
-}
-.social-icon-wpp:hover {
-    background: #FFF;
-    border-radius: 100%;
-}
-.social-icon-ig:hover {
-    background: #FFF;
-    border-radius: 100%;
-}
-@media screen and (max-width: 480px) {
-    .navbar {
-        margin: 0;
-    }
-    div.icones-header {
-        gap: 0.5rem;
-    }
-    .navbar-toggler {
-        border: none;
-    }
-    span.navbar-toggler-icon {
-        height: 32px;
-        width: 32px;
-    }
-    .log-in_sign-in_button button {
-        padding: 0.16rem;
-    }
-}
